--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,14 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+      
+    - name: Build & push Docker image  
+    uses: mr-smithers-excellent/docker-build-push@v6
+    with:
+      image: hmaridi383/department-service:1.1
+      tags: latest
+      registry: hub.docker.com
+      dockerfile: Dockerfile.ci
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}  
   
