--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,12 +6,13 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Employee Microservices Backend API Pipeline
+name: Java CI with Maven
+
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -26,16 +27,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn clean install
-      
-    - name: Build & push Docker image  
-    uses: mr-smithers-excellent/docker-build-push@v6
-    with:
-      image: hmaridi383/department-service:1.1
-      tags: latest
-      registry: hub.docker.com
-      dockerfile: Dockerfile.ci
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}  
-  
+    
+    - name: Build & Push docker image
+      env:
+        DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
+        DOCKERHUB_PWD: ${{ secrets.DOCKERHUB_PWD }}
