--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,12 @@ jobs:
         server-id: docker.io
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD 
-        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}   
+          
     - name: Building and Pushing discovery-service
       run: mvn package dockerfile:push --file discovery-service/pom.xml
       env:
