--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        server-id: docker.io
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD    
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
