--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,8 +1,7 @@
 FROM openjdk:17-alpine
-ENV APP_FILE gateway-service-1.1.jar
+ENV APP_FILE gateway-service.jar
 ENV APP_HOME /usr/apps
 EXPOSE 8090
 COPY target/$APP_FILE $APP_HOME/
 WORKDIR $APP_HOME
-ENTRYPOINT ["sh", "-c"]
 CMD ["exec java -jar $APP_FILE"]
