--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -77,7 +77,7 @@
 		</dependency>
 	</dependencies>
 	
-	  <build>
+	<!--  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -106,4 +106,4 @@
 
 		</plugins>
 	</build>
-</project>
+--></project>
