--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
-          <build>
+        <!--  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -47,5 +47,5 @@
 			</plugin>
 
 		</plugins>
-	</build>
+	</build>-->
 </project>
