--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -67,7 +67,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-	  <build>
+	 <!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -95,6 +95,6 @@
 			</plugin>
 
 		</plugins>
-	</build>
+	</build>-->
 </project>
    
