--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -42,7 +42,7 @@
 		</dependency>
 	</dependencies>
 
-	  <build>
+	  <!--<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -70,5 +70,5 @@
 			</plugin>
 
 		</plugins>
-	</build>
+	</build>-->
 </project>
