--- a/organization-service/pom.xml
+++ b/organization-service/pom.xml
@@ -59,7 +59,7 @@
 		</dependency>
 	</dependencies>
 
-	  <build>
+	 <!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -87,5 +87,5 @@
 			</plugin>
 
 		</plugins>
-	</build>
+	</build>-->
 </project>
