uncomments in spotify

--- a/organization-service/pom.xml
+++ b/organization-service/pom.xml
@@ -59,13 +59,12 @@
 		</dependency>
 	</dependencies>
 
-	 <!-- <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
@@ -85,7 +84,6 @@
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
 			</plugin>
-
 		</plugins>
-	</build>-->
+	</build>
 </project>
