--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -76,14 +76,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	<!--  <build>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
@@ -103,7 +102,6 @@
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
---></project>
+</project>
