--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -42,13 +42,12 @@
 		</dependency>
 	</dependencies>
 
-	  <!--<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
@@ -68,7 +67,6 @@
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 				</configuration>
 			</plugin>
-
 		</plugins>
-	</build>-->
+	</build>
 </project>
