--- a/department-service/Dockerfile
+++ b/department-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-alpine
-ENV APP_FILE department-service.jar
+ENV APP_FILE department-service-1.2.jar
 ENV APP_HOME /usr/apps
 EXPOSE 8091
 COPY target/$APP_FILE $APP_HOME/
