--- a/discovery-service/Dockerfile
+++ b/discovery-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-alpine
-ENV APP_FILE discovery-service.jar
+ENV APP_FILE discovery-service-1.2.jar
 ENV APP_HOME /usr/apps
 EXPOSE 8761
 COPY target/$APP_FILE $APP_HOME/
