--- a/organization-service/Dockerfile
+++ b/organization-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-alpine
-ENV APP_FILE organization-service.jar
+ENV APP_FILE organization-service-1.2.jar
 ENV APP_HOME /usr/apps
 EXPOSE 8093
 COPY target/$APP_FILE $APP_HOME/
